--- a/app/src/main/res/layout/activity_my_bills.xml
+++ b/app/src/main/res/layout/activity_my_bills.xml
@@ -26,7 +26,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnIncoming"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -34,42 +34,42 @@
             android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintEnd_toStartOf="@+id/btnDue"
             app:layout_constraintHorizontal_chainStyle="packed" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnDue"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/due"
             android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
-            app:layout_constraintStart_toEndOf="@+id/button1"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
+            app:layout_constraintStart_toEndOf="@+id/btnIncoming"
+            app:layout_constraintEnd_toStartOf="@+id/btnRecurring"
             app:layout_constraintHorizontal_chainStyle="packed" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnRecurring"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/recurring"
             android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
-            app:layout_constraintStart_toEndOf="@+id/button2"
-            app:layout_constraintEnd_toStartOf="@+id/button4"
+            app:layout_constraintStart_toEndOf="@+id/btnDue"
+            app:layout_constraintEnd_toStartOf="@+id/btnPaid"
             app:layout_constraintHorizontal_chainStyle="packed" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btnPaid"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/paid"
             android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
-            app:layout_constraintStart_toEndOf="@+id/button3"
+            app:layout_constraintStart_toEndOf="@+id/btnRecurring"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed" />
 
@@ -89,7 +89,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/button1"
+            app:layout_constraintTop_toBottomOf="@+id/btnIncoming"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
