--- a/app/src/main/res/layout/item_month.xml
+++ b/app/src/main/res/layout/item_month.xml
@@ -2,15 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:background="@color/light_gray">
+    android:orientation="horizontal"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/textviewMonthYear"
+        android:id="@+id/textviewMonth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"/>
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 </LinearLayout>
