--- a/app/src/main/res/layout/dialog_box_bill.xml
+++ b/app/src/main/res/layout/dialog_box_bill.xml
@@ -201,15 +201,13 @@
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
 
-                <EditText
+                <ImageView
                     android:id="@+id/edtAttachmentDialog"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:layout_marginTop="2dp"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginTop="8dp"
+                    android:contentDescription="Bill Image"/>
             </LinearLayout>
 
             <!-- Lower Part -->
