--- a/app/src/main/res/layout/activity_create_bill.xml
+++ b/app/src/main/res/layout/activity_create_bill.xml
@@ -110,6 +110,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerRepeat" />
 
+    <TextView
+        android:id="@+id/txtImageAdded"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="29dp"
+        android:layout_marginEnd="94dp"
+        android:text="Image added"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnImage" />
+
     <Spinner
         android:id="@+id/spinnerVendors"
         android:layout_width="0dp"
