--- a/app/src/main/res/layout/activity_create_bill.xml
+++ b/app/src/main/res/layout/activity_create_bill.xml
@@ -117,6 +117,7 @@
         android:layout_marginStart="29dp"
         android:layout_marginEnd="94dp"
         android:text="Image added"
+        android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/btnCancel"
         app:layout_constraintEnd_toEndOf="parent"
