--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -6,7 +6,8 @@
 
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
-    android:layout_margin="16dp">
+    android:layout_margin="16dp"
+    android:id="@+id/cardView">
 
     <LinearLayout
         android:layout_width="356dp"
