--- a/app/src/main/res/layout/activity_create_spending.xml
+++ b/app/src/main/res/layout/activity_create_spending.xml
@@ -5,8 +5,23 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_blue1"
+    android:background="@drawable/background_blue2"
     tools:context=".createSpending">
+
+    <!-- Vertical Guideline -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="32dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineEnd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="32dp" />
 
     <!-- Title -->
     <TextView
@@ -16,7 +31,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/create_new_spending"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -25,10 +40,8 @@
     <EditText
         android:id="@+id/edtTitleSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:background="@drawable/rounded_frame_background"
         android:hint="@string/write_your_title"
         android:inputType="text"
@@ -37,9 +50,9 @@
         android:paddingRight="15dp"
         android:textColorHint="#A5A5A5"
         android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
 
     <!-- Category -->
     <TextView
@@ -47,23 +60,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
         android:text="@string/category"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtTitleSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <Spinner
         android:id="@+id/spinnerCategoriesSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:background="@drawable/rounded_frame_background"
         app:layout_constraintTop_toBottomOf="@+id/txtCategorySpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
     <!-- Subcategory -->
     <TextView
@@ -71,23 +82,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
         android:text="Subcategory"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <Spinner
         android:id="@+id/spinnerSubcategoriesSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:background="@drawable/rounded_frame_background"
         app:layout_constraintTop_toBottomOf="@+id/txtSubcategorySpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
     <!-- Vendor -->
     <TextView
@@ -95,23 +104,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
         android:text="@string/vendor"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerSubcategoriesSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <Spinner
         android:id="@+id/spinnerVendorsSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:background="@drawable/rounded_frame_background"
         app:layout_constraintTop_toBottomOf="@+id/txtVendorSpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
     <!-- Custom Vendor -->
     <EditText
@@ -119,14 +126,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:hint="Enter custom vendor"
         android:visibility="gone"
         android:background="@drawable/rounded_frame_background"
         app:layout_constraintTop_toBottomOf="@+id/spinnerVendorsSpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
     <!-- Amount -->
     <TextView
@@ -134,19 +139,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
         android:text="@string/amount"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtCustomVendorSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <EditText
         android:id="@+id/edtAmountSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:background="@drawable/rounded_frame_background"
         android:hint="@string/amount"
         android:inputType="numberDecimal"
@@ -155,8 +158,8 @@
         android:textColorHint="#A5A5A5"
         android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@+id/txtAmountSpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
     <!-- Date -->
     <TextView
@@ -164,19 +167,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
         android:text="@string/Date"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtAmountSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <EditText
         android:id="@+id/edtDateSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:background="@drawable/rounded_frame_background"
         android:hint="@string/purchase_date"
         android:inputType="text"
@@ -185,8 +186,8 @@
         android:textColorHint="#A5A5A5"
         android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@+id/txtDateSpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
     <!-- Comment -->
     <TextView
@@ -194,19 +195,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
         android:text="@string/comment"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtDateSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <EditText
         android:id="@+id/edtCommentSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
         android:background="@drawable/rounded_frame_background"
         android:hint="@string/write_your_comments"
         android:inputType="text"
@@ -216,40 +215,37 @@
         android:textColorHint="#A5A5A5"
         android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@+id/txtCommentSpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
-    <!-- Attachment -->
+    <!-- Attachment and Upload Button -->
     <TextView
         android:id="@+id/txtAttachmentSpending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="27dp"
         android:text="@string/Attachment"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtCommentSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <Button
         android:id="@+id/btnUploadImageSpending"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
-        android:text="@string/Upload"
+        android:layout_height="36dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/rounded_frame_background"
-        app:layout_constraintTop_toBottomOf="@+id/txtAttachmentSpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:text="@string/Upload"
+        app:layout_constraintStart_toEndOf="@+id/txtAttachmentSpending"
+        app:layout_constraintTop_toTopOf="@+id/txtAttachmentSpending" />
 
     <TextView
         android:id="@+id/txtImageAddedSpending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="27dp"
         android:text="Image added"
         android:textStyle="bold"
         android:visibility="gone"
@@ -262,26 +258,27 @@
         android:id="@+id/btnCancelSpending"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btnlog"
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnSaveSpending"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
 
     <Button
         android:id="@+id/btnSaveSpending"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="27dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btnlogin"
         android:text="@string/save"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnCancelSpending" />
+        app:layout_constraintStart_toEndOf="@+id/btnCancelSpending"
+        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
